Desarrollando funcionalidad valoración producto

--- a/funCardProducto.html
+++ b/funCardProducto.html
@@ -4,54 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
 </head>
-<style>
-    .contenedor {
-        display: flex;
-        align-items: center;
-        width: 100%;
-        background-color: rgb(179, 103, 103);
-        height: 400px;
-    }
 
-    .div1 {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        background-color: royalblue; 
-        width: 220px; 
-        height: 320px;
-        margin-left: 10px;
-        border: 1px solid black;
-    }
-
-    .imgProducto {
-        width: 200px;
-        height: 200px;
-    }
-
-    .contenedor-info {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        align-items: center;
-        background-color: red;
-        width: 200px; 
-    }
-
-    .marca {
-        margin-right: 5px;
-    }
-
-    .contenedorMarca {
-        display: flex;
-    }
-
-    .contenedorProcesador {
-        display: flex;
-    }
-
-</style>
 </head>
 
 <body>
@@ -69,79 +26,7 @@
 
 <div class="contenedor" id="contenedor"></div>
 
-<script>
-
-    /* var Persona = [
-            {
-                nombre:"jose",
-                edad:55,
-                img:"img.png"
-            },
-            {
-                nombre:"matilde",
-                edad:33,
-                img:"img.png"
-            }
-        ]
-
-        for(var i = 0; i<Persona.length; i++){
-            /* console.log(Persona[i].nombre); */
-            /* console.log(baseDatos[i].nombre); */
-           /*  document.getElementById("tabla").innerHTML += '<tbody><td>'+baseDatos[i].nombre+'</td></tbody>';  */ 
-            /* document.getElementById("tabla").innerHTML += '<tbody><td>'+Persona[i].nombre+'</td><td>'+Persona[i].edad+'</td></tbody>'; */  
-           /*  document.getElementById("contenedor").innerHTML +=
-            '<div class="div1"><img src='+Persona[i].img+' alt=""><p class="nombre">'+Persona[i].nombre+'</p></div>';
-        }  */
-
-
-
-        var Ordenador = [
-            {
-                img:"img/lenovo_ideapad_i3.jpg",
-                marca:"Lenovo",
-                modelo:"Ideapad",
-                procesador:"i3",
-                ram:"8GB",
-                hd:"250GB SSD",
-                precio:"349€"
-                
-            },
-            {
-                img:"img/Apple_macBookAir_i3.jpg",
-                marca:"Apple",
-                modelo:"MacBook Air",
-                procesador:"i3",
-                ram:"8GB",
-                hd:"128GB SSD",
-                precio:"1099€"
-            }
-        ]
-
-        for(var i = 0; i<Ordenador.length; i++){
-            
-            /* console.log(Persona[i].nombre); */
-            /* console.log(baseDatos[i].nombre); */
-           /*  document.getElementById("tabla").innerHTML += '<tbody><td>'+baseDatos[i].nombre+'</td></tbody>';  */ 
-            /* document.getElementById("tabla").innerHTML += '<tbody><td>'+Persona[i].nombre+'</td><td>'+Persona[i].edad+'</td></tbody>'; */  
-            document.getElementById("contenedor").innerHTML +=
-            '<div class="div1">'+
-                '<img class="imgProducto" src='+Ordenador[i].img+' alt="">'+
-                '<div class="contenedor-info">'+
-                    '<div class="contenedorMarca">'+
-                    '<p class="marca">'+Ordenador[i].marca+'</p>'+
-                    '<p class="modelo">'+Ordenador[i].modelo+'</p>'+
-                '</div>'+
-                '<div class="contenedorProcesador">'+
-                    '<p class="procesador">'+Ordenador[i].procesador+'</p>'+
-                    '<p class="ram">/ '+Ordenador[i].ram+'</p>'+
-                    '<p class="hd"> / '+Ordenador[i].hd+'</p>'+
-                '</div>'+
-                    '<p class="precio">'+Ordenador[i].precio+'</p>'+  
-                '</div>'+     
-            '</div>'; 
-        }
-
-</script>
+<script src="js/main.js"></script>
 
 </body>
 </html>
