--- a/index.html
+++ b/index.html
@@ -6,16 +6,52 @@
     <title>Tienda Pc</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
 
+    <header class="container-fluid">
+
+            <!-- Barra de navegación -->
+            <nav class="navbar navbar-dark bg-dark d-md-none">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                  <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="#">LAPTOPS <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="#">DESKTOPS</a>
+                    <a class="nav-item nav-link" href="#">MONITORS</a>
+                    <a class="nav-item nav-link" href="#">TABLETS</a>
+                    <a class="nav-item nav-link" href="#">KEYBOARDS</a>
+                    <a class="nav-item nav-link" href="#">MICE</a>
+                    <a class="nav-item nav-link" href="#">OTHER</a>
+                  </div>
+                </div>
+            </nav>
+            <!-- Fin barra de navegación -->
+
+            <div class="container-cabecera">
+                <h1>ishop</h1>
+
+            </div>
+
+            <div class="slider">
 
 
 
+            </div>
+
+
+    </header>
 
 
     <!-- JavaScript -->
     <script src="js/main.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
