Creado menu de productos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <header class="container-fluid">
+    <main class="container-fluid">
 
             <!-- Barra de navegación -->
             <nav class="navbar navbar-dark bg-dark d-md-none">
@@ -34,7 +34,6 @@
 
             <div class="container-cabecera">
                 <h1 class="txt-encabezado">ishop</h1>
-
             </div>
 
 
@@ -67,8 +66,30 @@
             </div>
             <!-- Fin Slider -->
 
-
     </header>
+
+    <div class="row">
+      <div class="col-lg-4  slider c1 padding-rf">
+        <img src="img/img_laptops.jpg" class="d-block w-100" alt="Laptops">
+      </div>
+      <div class="col-lg-4 slider c2 padding-rf padding-lf">
+        <img src="img/img_laptops.jpg" class="d-block w-100" alt="Laptops">
+      </div>
+      <div class="col-lg-4 slider c3 padding-lf">
+        <img src="img/img_accessories.jpg" class="d-block w-100" alt="Laptops">
+      </div>
+    </div>
+
+
+
+ 
+
+
+
+
+
+      
+  
 
 
     <!-- JavaScript -->
