--- a/index.html
+++ b/index.html
@@ -117,6 +117,15 @@
       <!-- Fin newsletter -->
 
 
+      <!-- Footer -->
+      <div class="container-fluid">
+        <div class="row container-footer">
+          <span>Copyright© 2020, all Rights Reserved.</span>
+        </div>
+      </div>
+      <!-- Fin footer -->
+
+
       
   
 
