--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <!-- Cabecera -->
       <header class="container-fluid">
 
-        <!-- Barra de navegación -->
+        <!-- Barra de navegación versión móvil-->
         <nav class="navbar navbar-dark bg-dark d-md-none">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -31,11 +31,39 @@
             </div>
           </div>
       </nav>
-      <!-- Fin barra de navegación -->
+      <!-- Fin barra de navegación version móvil-->
+
 
       <div class="container-cabecera">
           <h1 class="txt-encabezado">ishop</h1>
       </div>
+
+      <!-- <nav class="navbar navbar-light bg-light d-sm-none d-md-block d-lg-block"></nav> -->
+
+      <!-- Barra de navegación -->
+      <div class="container-fluid container-navEscritorio"> 
+        
+        <nav class=" navbar-expand-md navbar-light bg-light jose">  
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+           
+      </div>
+      <!-- Fin barra de navegación -->
 
 
       <!-- Slider -->
