--- a/index.html
+++ b/index.html
@@ -43,22 +43,17 @@
       <!-- Barra de navegación -->
       <div class="container-fluid container-navEscritorio"> 
         
-        <nav class=" navbar-expand-md navbar-light bg-light jose">  
+        <nav class="navbar-expand-md">  
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
+            <div class="navbar-nav container-nav-enlaces">
+              <a class="nav-item nav-link nav-enlaces active" href="#">LAPTOPS <span class="sr-only">(current)</span></a>
+              <a class="nav-item nav-link nav-enlaces" href="#">DESKTOPS</a>
+              <a class="nav-item nav-link nav-enlaces" href="#">MONITORS</a>
+              <a class="nav-item nav-link nav-enlaces" href="#">TABLETS</a>
+              <a class="nav-item nav-link nav-enlaces" href="#">KEYBOARDS</a>
+              <a class="nav-item nav-link nav-enlaces" href="#">MICE</a>
+              <a class="nav-item nav-link nav-enlaces" href="#">OTHER</a>
+            </div>
           </div>
         </nav>
            
