--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-item nav-link active" href="index.html">INICIO <span class="sr-only">(current)</span></a>
-              <a class="nav-item nav-link" href="blog.html">BLOG</a>
-              <a class="nav-item nav-link" href="#">LAPTOPS</a>
-              <a class="nav-item nav-link" href="#">DESKTOPS</a>
-              <a class="nav-item nav-link" href="#">TABLETS</a>
+              <a class="nav-item nav-link nav-enlaces active" href="index.html">INICIO <span class="sr-only">(current)</span></a>
+              <a class="nav-item nav-link nav-enlaces" href="blog.html">BLOG</a>
+              <a class="nav-item nav-link nav-enlaces" href="#">LAPTOPS</a>
+              <a class="nav-item nav-link nav-enlaces" href="#">DESKTOPS</a>
+              <a class="nav-item nav-link nav-enlaces" href="#">TABLETS</a>
             </div>
           </div>
       </nav>
@@ -33,7 +33,7 @@
 
 
       <div class="container-cabecera">
-          <h1 class="txt-encabezado">ishop</h1>
+        <h1 class="txt-encabezado">ishop</h1>
       </div>
 
       <!-- <nav class="navbar navbar-light bg-light d-sm-none d-md-block d-lg-block"></nav> -->
@@ -44,11 +44,11 @@
         <nav class="navbar-expand-md">  
           <div class="collapse navbar-collapse" id="navbarNav">
             <div class="navbar-nav container-nav-enlaces">
-              <a class="nav-item nav-link active" href="index.html">INICIO <span class="sr-only">(current)</span></a>
-              <a class="nav-item nav-link" href="blog.html">BLOG</a>
-              <a class="nav-item nav-link" href="#">LAPTOPS</a>
-              <a class="nav-item nav-link" href="#">DESKTOPS</a>
-              <a class="nav-item nav-link" href="#">TABLETS</a>
+              <a class="nav-item nav-link nav-enlaces active" href="index.html">INICIO <span class="sr-only">(current)</span></a>
+              <a class="nav-item nav-link nav-enlaces" href="blog.html">BLOG</a>
+              <a class="nav-item nav-link nav-enlaces" href="#">LAPTOPS</a>
+              <a class="nav-item nav-link nav-enlaces" href="#">DESKTOPS</a>
+              <a class="nav-item nav-link nav-enlaces" href="#">TABLETS</a>
             </div>
           </div>
         </nav>
@@ -120,11 +120,6 @@
       <!-- Fin cards de productos -->
 
 
-      <!-- Zona Drag and Drop de productos favoritos -->
-      <section id="zonadestino" ondrop="drop(event)" ondragover="allowDrop(event)"></section>
-      <!-- Fin zona Drag and Drop de productos favoritos -->
-
-
       <!-- Newsletter -->
       <div class="container-fluid">
         <div class="row container-newsletter">
@@ -153,7 +148,7 @@
       
 
     <!-- JavaScript -->
-    <script src="js/main.js"></script>
+    <script src="js/index.js"></script>
 
     <!-- Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
