Algunos retoques en los estilos

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <div class="navbar-nav">
               <a class="nav-item nav-link nav-enlaces active" href="index.html">INICIO <span class="sr-only">(current)</span></a>
               <a class="nav-item nav-link nav-enlaces" href="blog.html">BLOG</a>
+              <a class="nav-item nav-link nav-enlaces" href="#">CONTACTO</a>
               <a class="nav-item nav-link nav-enlaces" href="#">LAPTOPS</a>
-              <a class="nav-item nav-link nav-enlaces" href="#">DESKTOPS</a>
               <a class="nav-item nav-link nav-enlaces" href="#">TABLETS</a>
             </div>
           </div>
@@ -46,8 +46,8 @@
             <div class="navbar-nav container-nav-enlaces">
               <a class="nav-item nav-link nav-enlaces active" href="index.html">INICIO <span class="sr-only">(current)</span></a>
               <a class="nav-item nav-link nav-enlaces" href="blog.html">BLOG</a>
+              <a class="nav-item nav-link nav-enlaces" href="#">CONTACTO</a>
               <a class="nav-item nav-link nav-enlaces" href="#">LAPTOPS</a>
-              <a class="nav-item nav-link nav-enlaces" href="#">DESKTOPS</a>
               <a class="nav-item nav-link nav-enlaces" href="#">TABLETS</a>
             </div>
           </div>
@@ -94,14 +94,17 @@
       <section class="container-fluid">
 
         <div class="row">
-          <div class="col-lg-4  slider">
+          <div class="col-lg-4  slider centrar-txt">
             <img src="img/img_laptops.jpg" class="d-block w-100" alt="Laptops">
+            <h2 class="menu-superior">LAPTOPS</h2>
           </div>
-          <div class="col-lg-4 slider">
+          <div class="col-lg-4 slider centrar-txt">
             <img src="img/img_tablets.jpg" class="d-block w-100" alt="Laptops">
+            <h2 class="menu-superior">TABLETS</h2>
           </div>
-          <div class="col-lg-4 slider">
+          <div class="col-lg-4 slider centrar-txt">
             <img src="img/img_accessories.jpg" class="d-block w-100" alt="Laptops">
+            <h2 class="menu-superior">ACCESSORIES</h2>
           </div>  
         </div>
 
