--- a/contacto.html
+++ b/contacto.html
@@ -23,8 +23,8 @@
             <div class="navbar-nav">
               <a class="nav-item nav-link nav-enlaces active" href="index.html">INICIO <span class="sr-only">(current)</span></a>
               <a class="nav-item nav-link nav-enlaces" href="blog.html">BLOG</a>
+              <a class="nav-item nav-link nav-enlaces" href="#">CONTACTO</a>
               <a class="nav-item nav-link nav-enlaces" href="#">LAPTOPS</a>
-              <a class="nav-item nav-link nav-enlaces" href="#">DESKTOPS</a>
               <a class="nav-item nav-link nav-enlaces" href="#">TABLETS</a>
             </div>
           </div>
@@ -46,8 +46,8 @@
             <div class="navbar-nav container-nav-enlaces">
                 <a class="nav-item nav-link nav-enlaces active" href="index.html">INICIO <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link nav-enlaces" href="blog.html">BLOG</a>
+                <a class="nav-item nav-link nav-enlaces" href="#">CONTACTO</a>
                 <a class="nav-item nav-link nav-enlaces" href="#">LAPTOPS</a>
-                <a class="nav-item nav-link nav-enlaces" href="#">DESKTOPS</a>
                 <a class="nav-item nav-link nav-enlaces" href="#">TABLETS</a>
             </div>
           </div>
