--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
             <div class="navbar-nav">
               <a class="nav-item nav-link nav-enlaces active" href="index.html">INICIO <span class="sr-only">(current)</span></a>
               <a class="nav-item nav-link nav-enlaces" href="blog.html">BLOG</a>
-              <a class="nav-item nav-link nav-enlaces" href="#">CONTACTO</a>
-              <a class="nav-item nav-link nav-enlaces" href="#">LAPTOPS</a>
-              <a class="nav-item nav-link nav-enlaces" href="#">TABLETS</a>
+              <a class="nav-item nav-link nav-enlaces" href="contacto.html">CONTACTO</a>
             </div>
           </div>
       </nav>
@@ -46,9 +44,7 @@
             <div class="navbar-nav container-nav-enlaces">
               <a class="nav-item nav-link nav-enlaces active" href="index.html">INICIO <span class="sr-only">(current)</span></a>
               <a class="nav-item nav-link nav-enlaces" href="blog.html">BLOG</a>
-              <a class="nav-item nav-link nav-enlaces" href="#">CONTACTO</a>
-              <a class="nav-item nav-link nav-enlaces" href="#">LAPTOPS</a>
-              <a class="nav-item nav-link nav-enlaces" href="#">TABLETS</a>
+              <a class="nav-item nav-link nav-enlaces" href="contacto.html">CONTACTO</a>
             </div>
           </div>
         </nav>
