--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Tienda Pc</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">  
+
 </head>
 <body>
 
@@ -92,15 +93,15 @@
         <div class="row">
           <div class="col-lg-4  slider centrar-txt">
             <img src="img/img_laptops.jpg" class="d-block w-100" alt="Laptops">
-            <h2 class="menu-superior">LAPTOPS</h2>
+            <!-- <h2 class="menu-superior">LAPTOPS</h2> -->
           </div>
           <div class="col-lg-4 slider centrar-txt">
             <img src="img/img_tablets.jpg" class="d-block w-100" alt="Laptops">
-            <h2 class="menu-superior">TABLETS</h2>
+            <!-- <h2 class="menu-superior">TABLETS</h2> -->
           </div>
           <div class="col-lg-4 slider centrar-txt">
             <img src="img/img_accessories.jpg" class="d-block w-100" alt="Laptops">
-            <h2 class="menu-superior">ACCESSORIES</h2>
+            <!-- <h2 class="menu-superior">ACCESSORIES</h2> -->
           </div>  
         </div>
 
