Desarrollando funcionalidad drag and drop en productos

--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
       <section class="container-fluid">
         <h2 class="txt-seccion-productos">New Products</h2>
         <hr>
+
+        <div class="carrito"></div>
         
         <div id="productos" class="row">
           
