--- a/pruebas.html
+++ b/pruebas.html
@@ -7,13 +7,13 @@
 </head>
 <body>
 
-    <p id="demo">Click me.</p>
+    <p id="p1" value="1"></p>
+    <p id="p2" value="2"></p>
     
 
-
-
-
     <script>
+
+        
 
         document.getElementById("demo").onclick = function() {myFunction()};
 
