Se añade funcionalidad de login

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
               <a class="nav-item nav-link nav-enlaces active" href="index.html">INICIO <span class="sr-only">(current)</span></a>
               <a class="nav-item nav-link nav-enlaces" href="blog.html">BLOG</a>
               <a class="nav-item nav-link nav-enlaces" href="contacto.html">CONTACTO</a>
+              <a class="nav-item nav-link nav-enlaces" href="#">LOCALSTORAGE</a>
+              <div id="usernav"></div>
+              <a class="nav-item nav-link nav-enlaces" id="close" href="#">CERRAR SESIÓN</a>
             </div>
           </div>
       </nav>
@@ -46,6 +49,9 @@
               <a class="nav-item nav-link nav-enlaces active" href="index.html">INICIO <span class="sr-only">(current)</span></a>
               <a class="nav-item nav-link nav-enlaces" href="blog.html">BLOG</a>
               <a class="nav-item nav-link nav-enlaces" href="contacto.html">CONTACTO</a>
+              <a class="nav-item nav-link nav-enlaces" href="#">LOCALSTORAGE</a>
+              <div id="usernav"></div>
+              <a class="nav-item nav-link nav-enlaces" id="close" href="#">CERRAR SESIÓN</a>
             </div>
           </div>
         </nav>
@@ -172,6 +178,7 @@
 
     <!-- JavaScript -->
     <script src="js/index.js"></script>
+    <script src="js/nav.js"></script>
 
     <!-- Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
