--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
-            <div id="usernav"></div>
+            <div id="usernav">
               <a class="nav-item nav-link nav-enlaces nav-enlaces" id="close" href="#">CERRAR SESIÓN</a>
             </div>
           </form>
